--- a/styles/flex_grid.css
+++ b/styles/flex_grid.css
@@ -85,4 +85,59 @@
 
 /* for responsive smaller devices */
 
+/* Responsive for small devices */
+@media screen and (max-width: 576px) {
+    .container{
+        flex-direction: column;
+        width: 90%;
+    }
+    .image-container{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(7,1fr);
+        width: 100%;
+    }
+    .text-container{
+        width: 100%;
+    }
+    
+    
+.grid-item-1{
+    grid-column: 1/span 1;
+    grid-row: 1/span 1;   
+}
+.grid-item-2{
+    
+    grid-column: 1/span 1;
+    grid-row: 2/span 1;
+
+}
+.grid-item-3{
+    
+    grid-column: 1/span 1;
+    grid-row: 3/span 1; 
+}
+.grid-item-4{
+   
+    grid-column: 1/span 1;
+    grid-row: 4/span 1;  
+}
+.grid-item-5{
+   
+    grid-column: 1/span 1;
+    grid-row: 5/span 1;  
+}
+.grid-item-6{
+   
+    grid-column: 1/span 1;
+    grid-row: 6/span 1;    
+}
+.grid-item-7{
+   
+    grid-column: 1/span 1;
+    grid-row: 7/span 1;  
+}
+
+    
+}
+
 
