added footer html and css different way for responsive footer but responsive not done yet

--- a/styles/flex_grid.css
+++ b/styles/flex_grid.css
@@ -9,6 +9,7 @@
 
 
 
+
 /* Main section related styles */
 
 .container{
@@ -98,13 +99,12 @@
 
 
 
-/* footer related styles */
-
-
-
 
 
 /* for responsive smaller devices */
+.hide{
+    display: none;
+}
 
 /* Responsive for small devices */
 @media screen and (max-width: 576px) {
